<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical"
        android:background="@drawable/vds_add_video_shape"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vds_dialog_add_video"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorLine"
            />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/vds_tv_record"
               android:text="@string/vds_record"
               android:layout_marginTop="15dp"
               android:gravity="center"
               android:textSize="23dp"
               android:textColor="@color/colorShareFont"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorLine"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vds_tv_import_photos"
            android:text="@string/vds_gallery"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textSize="23dp"
            android:textColor="#583EFF"
           />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorLine"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vds_tv_cancel"
            android:text="@string/vds_cancel"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="23dp"
            android:textColor="@color/colorCancel"
            />
    </LinearLayout>
</LinearLayout>