<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
       android:orientation="horizontal"
       android:id="@+id/vds_signup_ll_container">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorTransparented"
        android:orientation="vertical"
        android:padding="10dp">
        <View
            android:layout_width="40dp"
            android:layout_height="2dp"
            android:background="@color/colorLine"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/vds_tv_upload_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/vds_virtual_press_conference"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorMainText"
                    />
                <TextView
                    android:id="@+id/vds_tv_signup_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4dp"
                    android:lines="2"
                    android:text="@string/vds_send_in_your_thoughts_on_your_victory_against_wolfsburg"
                    android:textSize="15sp"
                    android:textColor="@color/colorText"
                    />
                <TextView
                    android:id="@+id/vds_tv_signup_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/vds_james_bigglesworth"
                    android:visibility="gone"
                    android:textSize="15sp"
                    android:textColor="@color/colorText"
                   />
                <TextView
                    android:id="@+id/vds_tv_signup_membership"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/vds_membership30091092"
                    android:visibility="gone"
                    android:textSize="15sp"
                    android:textColor="@color/colorText"
                    />


            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/vds_nbl_logo"
                android:visibility="gone"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLine" />
        <Button
            android:id="@+id/vds_btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/vds_sign_up"
            android:textColor="@android:color/white"
            android:background="@drawable/vds_signup_btn_shape"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:visibility="visible"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            />
        <ImageView
            android:id="@+id/vds_iv_video_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:background="@drawable/vds_signup_btn_add_video_shape"
            android:visibility="gone"
            android:src="@drawable/vds_plus_icon"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/vds_tv_signup_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/vds_get_rewarded_for_your_interactions_with_the_team_fc_bayerm_s_membership_program_rewards_you_with_loyality_points_for_your_participation_which_you_can_then_redeem_in_our_store"
            android:textSize="15dp"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/vds_tv_signgup_binfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/vds_tap_on_the_plus_button_to_r_n_contribute_your_own_video"
            android:textSize="18dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:textColor="@color/colorText"/>
    </LinearLayout>

</LinearLayout>