<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/popup_dialog_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorTransparented"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">
            <View
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/vds_tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/virtual_press_conference"
                        android:textColor="#454545"
                        android:paddingTop="5dp"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/vds_tv_subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="4dp"
                        android:lines="2"
                        android:paddingTop="5dp"
                        android:text="@string/send_in_your_thoughts_on_your_victory_against_wolfsburg"
                        android:textColor="#484848"
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/vds_tv_video_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/upload_your_video_questions_and_comments_to_the_team_about_yesterday_s_game"
                android:textColor="@color/colorText"
                android:textSize="13dp"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/vds_tv_favour_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/favourite_fan_videos_will_be_answered_on_monday_at_our_press_conference"
                android:textColor="#484848"
                android:textSize="13sp"
               />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/vds_iv_share"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/vds_share_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/vds_share"
                    android:textColor="#484848"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/vds_iv_video_gallery"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/vds_video_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/vds_videos"
                    android:textColor="#484848"
                    android:textSize="11sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/vds_rl_add_video"
                    android:background="@drawable/vds_popupdialog_video_shape">

                    <ImageView
                        android:id="@+id/vds_iv_video"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/vds_plus_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/vds_iv_video"
                        android:gravity="center_horizontal"
                        android:text="@string/vds_add_video"
                        android:textColor="@color/colorText"
                        android:textSize="13sp" />
                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>